Fix handling of duplicates in set type member of config